WIP Upgrade to new gluon